[gd_scene load_steps=6 format=2]

[ext_resource path="res://Entities/Enemies/EnemyB.gd" type="Script" id=1]
[ext_resource path="res://Entities/Enemies/Enemy.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 29.8726, 29.9087 )

[sub_resource type="CircleShape2D" id=2]
radius = 80.6003

[sub_resource type="CircleShape2D" id=3]
radius = 28.1929

[node name="EnemyB" type="RigidBody2D"]
collision_layer = 72
collision_mask = 142
gravity_scale = 0.0
contacts_reported = 5
contact_monitor = true
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
self_modulate = Color( 0.286275, 0.215686, 0, 1 )
scale = Vector2( 5, 5 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 0, 12, 12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="TimerMoving" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="TimerStanding" type="Timer" parent="."]
one_shot = true

[node name="TimerDying" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="DetectionRange" type="Area2D" parent="."]
collision_layer = 72
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionRange"]
shape = SubResource( 2 )

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource( 3 )
[connection signal="timeout" from="TimerMoving" to="." method="_on_TimerMoving_timeout"]
[connection signal="timeout" from="TimerStanding" to="." method="_on_TimerStanding_timeout"]
[connection signal="timeout" from="TimerDying" to="." method="_on_TimerDying_timeout"]
[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
